# tree-sitter-htmldjango

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-htmljinja.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_htmljinja/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterhtmlJinja/: htmljinja.h
bindings/swift/TreeSitterhtmlJinjaTests/: TreeSitterhtmlJinjaTests.swift
plugin/: init.lua
src/: grammar.json  node-types.json  parser.c
